# bevy_agb_test

./: .gitignore  Cargo.toml  README.md
assets/: bad.aseprite  hero.aseprite
src/: input.rs  lib.rs  logging.rs  main.rs  render.rs  runner.rs  time.rs
